docs: add eval subcommand and homebrew to release notes

--- a/changes/v0.7.0.md
+++ b/changes/v0.7.0.md
@@ -10,6 +10,8 @@
 - **Syntax Highlighting**: `.highlight` command for code blocks with theme support
 - **Plugin Support**: Load Nushell plugins with `--plugin` flag
 - **Precompiled Templates**: `.mj compile/render` for Jinja2 templates—~200x faster than generating HTML on the fly
+- **Eval Subcommand**: `http-nu eval` runs Nushell expressions with http-nu's embedded modules and custom builtin commands available
+- **Homebrew**: `brew install cablehead/tap/http-nu` on macOS
 
 ## Raw commits
 
