docs: unwrap soft line breaks in v0.11.0 changelog

--- a/changes/v0.11.0.md
+++ b/changes/v0.11.0.md
@@ -2,28 +2,21 @@
 
 ## Highlights
 
-The server can now run entirely from the stream. `--topic` loads the handler
-closure from an xs topic instead of a file, and with `-w` it hot-reloads
-whenever the topic is updated:
+The server can now run entirely from the stream. `--topic` loads the handler closure from an xs topic instead of a file, and with `-w` it hot-reloads whenever the topic is updated:
 
 ```bash
 http-nu :3001 --store ./store --topic serve -w
 ```
 
-If the topic doesn't exist yet, a placeholder page serves a 503 with
-instructions on how to get started. Append a closure and the server picks it up:
+If the topic doesn't exist yet, a placeholder page serves a 503 with instructions on how to get started. Append a closure and the server picks it up:
 
 ```nushell
 '{|req| "hello, world"}' | .append serve
 ```
 
-Topic-sourced handlers get access to VFS modules stored on the stream -- any
-`*.nu` topic appended to the store is available via standard `use` imports, same
-as with actors and services in xs.
+Topic-sourced handlers get access to VFS modules stored on the stream -- any `*.nu` topic appended to the store is available via standard `use` imports, same as with actors and services in xs.
 
-Cookies have first-class support. `use http-nu/http` gives you `cookie parse`,
-`cookie set`, and `cookie delete` with secure defaults (HttpOnly, SameSite=Lax,
-Secure). Multiple cookies accumulate naturally through the pipeline:
+Cookies have first-class support. `use http-nu/http` gives you `cookie parse`, `cookie set`, and `cookie delete` with secure defaults (HttpOnly, SameSite=Lax, Secure). Multiple cookies accumulate naturally through the pipeline:
 
 ```nushell
 use http-nu/http *
@@ -36,27 +29,20 @@ use http-nu/http *
 }
 ```
 
-The `--dev` flag tells the cookie module to omit the `Secure` attribute, so
-cookies work over plain HTTP during local development.
+The `--dev` flag tells the cookie module to omit the `Secure` attribute, so cookies work over plain HTTP during local development.
 
-Datastar's JS bundle is now embedded in the binary. `--datastar` serves it at a
-versioned path with immutable cache headers -- no CDN dependency, zero runtime
-compression (brotli is pre-built at compile time):
+Datastar's JS bundle is now embedded in the binary. `--datastar` serves it at a versioned path with immutable cache headers -- no CDN dependency, zero runtime compression (brotli is pre-built at compile time):
 
 ```nushell
 use http-nu/datastar *
 SCRIPT {type: "module" src: $DATASTAR_JS_PATH}
 ```
 
-`--expose` opens the xs API on an additional address, useful for separating the
-public-facing HTTP server from the stream management interface. Accepts TCP
-addresses or `iroh://` for peer-to-peer QUIC.
+`--expose` opens the xs API on an additional address, useful for separating the public-facing HTTP server from the stream management interface. Accepts TCP addresses or `iroh://` for peer-to-peer QUIC.
 
 ## Breaking changes
 
-- feat!: update cross-stream to 0.10.0 -- aligns with the xs processor rename
-  (handlers/generators/commands are now actors/services/actions) and the
-  2-parameter actor closure shape
+- feat!: update cross-stream to 0.10.0 -- aligns with the xs processor rename (handlers/generators/commands are now actors/services/actions) and the 2-parameter actor closure shape
 
 ## Changelog
 
